@startuml

title __QUIZMODULE's Class Diagram__\n

  namespace QuizModule {
    class QuizModule.QuizCommand {
        - channel : TextChannel
        - eb : EmbedBuilder
        - helpText : String
        + execute()
        + getHelp()
        + onMessageReceived()
        - getPoints()
    }
  }
  

  namespace QuizModule {
    class QuizModule.QuizSQLConnector {
        - conn : Connection
        + QuizSQLConnector()
        + addToPoints()
        + getPoints()
        - connect()
        - createTable()
        - createUser()
        - userExists()
    }
  }
  

  QuizModule.QuizCommand -up-|> Commands.Command
  QuizModule.QuizCommand o-- QuizModule.QuizSQLConnector : dbConnection
  QuizModule.QuizCommand o-- QuizModule.QuizMulti.QuizMulti : quizM
  QuizModule.QuizCommand o-- QuizModule.QuizSingle.QuizSingle : quizS


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
